@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST tlenlinux-7.0.1.68.bin 20115011 RMD160 0e9d648b6d5f6ee0165fdbab99658d862c3e78f7 SHA1 97de0d3f63faf0157d324786ea11e49c2431ac1c SHA256 5996dac36e3cca28480201cb2c7f9bb4b53d83b5271fc4a9085971fd6251301d
 DIST tlenlinux-7.0.1.71.bin 21271279 RMD160 2c868a19b45d6dedaf89533c2c698f195ab9d2e4 SHA1 2570f227d6b1fac56b7354d20600457d6bf23100 SHA256 62ab6bed150439158aa69cf41679777cbd0556c3c74ced4e87c060a467062d82
 DIST tlenlinux-7.0.1.72.bin 21316223 RMD160 2b9cd06c8e9d3711c0e8a967e23483cbb584bb16 SHA1 4e98f428969c305a0bbcdc65a7d8de69d8b27895 SHA256 63487a1cab64bf2a473aa989d8eee251709216a73ffa2e53aa3c54144bb4b2d1
@@ -6,9 +9,10 @@ DIST tlenlinux64-7.0.1.68.bin 19828794 RMD160 c72abef9596cd16e404b9f981ec7a5d509
 DIST tlenlinux64-7.0.1.71.bin 21113508 RMD160 cd020ff59a7f7860a5d42b536d0ef791c88f983b SHA1 4ee8e798e687cf387a6f53f88421e8f7ffef4763 SHA256 74f6e88f7abcacb4d87ff781c1f359585266943d0689973b513f422c22584dfd
 DIST tlenlinux64-7.0.1.72.bin 21174895 RMD160 77b59f07de2c2af8b27a0b958591e94d71d55456 SHA1 573516d9c05fa0a3cd574679710b5f89f9481fe3 SHA256 ca355a8d63977eb6b46bb9aea9585d71997cbbbed539b2f0d45704aeeb62830c
 DIST tlenlinux64-7.0.2.1.bin 21247166 RMD160 6460edff98dde076900877577a927d92f27088e7 SHA1 7ec558eab3861d4991f585a73d323d7ba8b8462e SHA256 d9baa250d7b6eae78d2cf85ce3f01c86af87f3b1da89cce8abce1e277ee4e42a
-EBUILD tlenlinux-7.0.1.68.ebuild 2150 RMD160 030eb63b8158ad7d51b71f2396669eaf26e635a0 SHA1 84886888a6858f0fb4915791884d242784a2e3cd SHA256 dfb0229063f1f4fd216d31f6f62e624538763d387601f605ae8e97cd74d55d6f
-EBUILD tlenlinux-7.0.1.71.ebuild 2150 RMD160 c412f1a1ce67da14d458ba0f2dfada1e222e9ae3 SHA1 1547d3a14f3d2c583c98b889df3fe8c4d6ccbd24 SHA256 1da412ca256bb3a88015bcb7fd528ed7d5d1c7304f9bcaf7fe4eecfe11dedbe3
-EBUILD tlenlinux-7.0.1.72.ebuild 2150 RMD160 c412f1a1ce67da14d458ba0f2dfada1e222e9ae3 SHA1 1547d3a14f3d2c583c98b889df3fe8c4d6ccbd24 SHA256 1da412ca256bb3a88015bcb7fd528ed7d5d1c7304f9bcaf7fe4eecfe11dedbe3
-EBUILD tlenlinux-7.0.2.1.ebuild 2150 RMD160 c412f1a1ce67da14d458ba0f2dfada1e222e9ae3 SHA1 1547d3a14f3d2c583c98b889df3fe8c4d6ccbd24 SHA256 1da412ca256bb3a88015bcb7fd528ed7d5d1c7304f9bcaf7fe4eecfe11dedbe3
-MISC ChangeLog 1871 RMD160 53868a85a0a19ba3955a54c2c7b09ede0ffa68ac SHA1 9d7f52c0f08e5d2a8508fefc90b7a67578341b88 SHA256 3b95c7f5a140c79bdea7964a90b7f6e8fb7c012f44ea7bda033678fb36391194
-MISC metadata.xml 409 RMD160 eb928c10790c7faab81f4eb674682b7cd68d47d3 SHA1 628e18d34931c7220c5276e5ea2142eb6c96b1e8 SHA256 867a9917a31e1adc68fd0def5c942781e125b2df1d1619371a7edb42e9a0d20d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iEYEARECAAYFAk9BCUMACgkQ9xNbxaeWTTzZ1wCeK5wRsm0CAai8TbrTELjjgzTi
+VUAAnAxoyV5e/hccs8+1ljGanf9XoYZG
+=1uCu
+-----END PGP SIGNATURE-----
